# Nuscene_devkit

./: .dockerignore  .gitignore  Dockerfile  README.md  justfile  pyproject.toml
experiments/: explore.py  setup_mlflow.py  test_inference.py
scripts/: download_data.py  validate_data.py
